# ansible-ubuntu-server

./: .gitignore  README.md  ansible.cfg  hosts.yaml  pyproject.toml  setup.cfg  site.yaml
group_vars/: all.yaml
roles/docker/defaults/: main.yaml
roles/docker/handlers/: main.yaml
roles/docker/tasks/: install.yaml  main.yaml
roles/docker/templates/etc/docker/: daemon.json.j2
roles/docker/vars/: main.yaml
roles/envs/defaults/: main.yaml
roles/envs/tasks/: anyenv.yaml  main.yaml  pyenv.yaml
roles/envs/vars/: main.yaml
roles/nvidia-docker/handlers/: main.yaml
roles/nvidia-docker/tasks/: install.yaml  main.yaml
roles/nvidia-docker/vars/: main.yaml
roles/nvidia-driver/defaults/: main.yaml
roles/nvidia-driver/tasks/: install.yaml  main.yaml  uninstall.yaml
roles/nvidia-driver/vars/: main.yaml
roles/system/defaults/: main.yaml
roles/system/handlers/: main.yaml
roles/system/tasks/: chrony.yaml  grub.yaml  main.yaml  packages.yaml  resolved.yaml  sysctl.yaml  timesyncd.yaml  timezone.yaml
roles/system/templates/etc/chrony/: chrony.conf.j2
roles/system/templates/etc/systemd/: resolved.conf.j2  timesyncd.conf.j2
roles/system/vars/: main.yaml
