[tool.poetry]
name = "ansible-ubuntu-server"
version = "0.1.0"
description = "Ansible playbook for my Ubuntu servers."
authors = ["mhrio2 <hirotsu.masaaki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.9.2"
jinja2 = "^2.10.3"
paramiko = "^2.7.1"
pyyaml = "^5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
